# MailMCP

./: .gitignore  README.md  pyproject.toml  server.py
src/apache_incubator_mail_mcp/: __init__.py  client.py  protocol.py  schemas.py  tools.py
tests/: fixtures.py  test_client.py  test_protocol.py  test_tools.py
